--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   lottie: ^3.3.1
   http: ^1.5.0
   skeletonizer: ^2.1.0+1
+  image_picker: ^1.2.0
+  image_cropper: ^11.0.0
 
 dev_dependencies:
   flutter_test:
