--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   skeletonizer: ^2.1.0+1
   image_picker: ^1.2.0
   image_cropper: ^11.0.0
+  firebase_storage: ^13.0.3
 
 dev_dependencies:
   flutter_test:
