--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   image_picker: ^1.2.0
   image_cropper: ^11.0.0
   firebase_storage: ^13.0.3
+  calendar_date_picker2: ^2.0.1
 
 dev_dependencies:
   flutter_test:
